Thu May 27 15:57:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/wincrypt.h: Add missing CRYPT_MACHINE_KEYSET define.

Thu May 18 11:37:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h: Add some missing TAPE_DRIVE_* defines.

Wed Apr 26 11:04:18 2000  Christopher Faylor <cgf@cygnus.com>

	* include/wininet.h: Add another "INTERNET_OPTIONS".

2000-04-25  Mumit Khan  <khan@xraylith.wisc.edu>

	* include/winspool.h: Add 2 more PRINTER_ATTRIBUTE_* macros.

2000-04-25  Martin Kotulla  <martin-k@softmaker.de>

	* include/ddeml.h (DdeCreateStringHandle{A,W}): Fix prototype.
	* include/shlobj.h (IShellLink{A,W}::GetPath): Fix prototype.
	* include/wingdi.h: Add LPFNDEVMODE and LPFNDEVCAPS callbacks.
	* include/winuser.h: Add WM_* macros. Add PCOPYDATASTRUCT typedef.

Mon Apr 10 22:58:25 2000  Christopher Faylor <cgf@cygnus.com>

	* include/winbase.h: Change first argument of ENUMRES* types to
	coincide with Microsoft usage.

Sat Apr  1 20:51:47 2000  Christopher Faylor <cgf@cygnus.com>

	* include/wininet.h: Add three more "INTERNET_OPTIONS".

2000-03-30  Mumit Khan  <khan@xraylith.wisc.edu>

	* include/winbase.h (CreateHardLink{A,W}): Add prototypes.
	* include/winerror.h (ERROR_TOO_MANY_LINKS): Add macro.
	* include/winnt.h (SEC_*): Add macros.
	* lib/th32.def: Use Kernel32.dll instead of TH32.DLL.
	* include/ole.h: Workaround for C++ parser bug.
	* include/rpcdcep.h: Likewise.
	* include/winsock.h: Likewise.

Sun Mar 26 13:41:47 2000  Christopher Faylor <cgf@cygnus.com>

	* include/winnt.h: Eliminate duplicate PCONTEXT and LPCONTEXT typedefs.

2000-02-28  Mumit Khan  <khan@xraylith.wisc.edu>

	Patches from Jan Nijtmans <j.nijtmans@chello.nl>:
	* include/wtypes.h (PBLOB, LPBLOB): Define.
	* include/winsock2.h: Much more complete version.
	(FD_SET, SOMAXCONN): Protect common macros defined by winsock.h.

	Patches from Jan Nijtmans <j.nijtmans@chello.nl>:
	* include/winsock.h (FD_CLR): Add missing ')'.